--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "helmet": "^4.2.0",
-    "mongoose": "^5.10.11"
+    "mongoose": "^5.10.11",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/express-validator": "^3.0.0",
     "@types/mongoose": "^5.7.37",
+    "@types/socket.io": "^2.1.11",
     "gulp": "^4.0.2",
     "node-sass": "^5.0.0",
     "typescript": "^4.0.5"
